//
// Copyright 2020 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.encap;

// Protocol buffer encoding representing an HTTP request.
message HttpRequest {
  // The URI (including scheme and authority) to which the request was sent.
  string uri = 1;
  // The HTTP request method used.
  string method = 2;
  // The body of the request.
  bytes body = 3;
  // The HTTP request headers.
  HeaderMap headers = 4;
}

// Protocol buffer encoding representing an HTTP response.
message HttpResponse {
  // The body of the response.
  bytes body = 1;
  // The HTTP status code.
  int32 status = 2;
  // The HTTP response headers.
  HeaderMap headers = 3;
}

// Wrapper around a HashMap representing the headers in HttpRequest and HttpResponse.
message HeaderMap {
  map<string, HeaderValue> headers = 1;
}

// Each header name in an HTTP request or HTTP response may correspond to more
// than one header values. This protocol buffer represents such header values.
message HeaderValue {
  repeated bytes values = 1;
}
